--- a/store/templates/store/user_detail.html
+++ b/store/templates/store/user_detail.html
@@ -7,24 +7,26 @@
         <form class="row justify-items-center" action="{% url 'store:profil' contact_id=contact.id %}" method="POST">
             {% csrf_token %}
             {% bootstrap_form UForm %}
-            <input type="password" class="form-control" name="new_password" placeholder="Entrez votre nouveau mot de passe" required></input><br />
-            <input type="password" class="form-control" name="control_password" placeholder="Entrez de nouveau votre nouveau mot de passe" required></input>
-            {% if errors %}
-                {% for error in errors %}
-                {% autoescape off %}
-                    <p class="alert-danger">{{ error }}</p>
-                {% endautoescape %}
-                {% endfor %}
-            {% endif %}
-            <div class="justify-items-center row">
-                <button type="submit" value="password" name="update" class="btn btn-light">Modifier</button><br />
-            </div>
-            {% if messages %}
-                {% for message in messages %}
-                {% autoescape off %}
-                    <p class="alert-success">{{ message }}</p>
-                {% endautoescape %}
-                {% endfor %}
+            {% if not user.is_staff %}
+                <input type="password" class="form-control" name="new_password" placeholder="Entrez votre nouveau mot de passe" required></input><br />
+                <input type="password" class="form-control" name="control_password" placeholder="Entrez de nouveau votre nouveau mot de passe" required></input>
+                {% if pwd_errors %}
+                    {% for error in pwd_errors %}
+                    {% autoescape off %}
+                        <p class="alert-danger">{{ error }}</p>
+                    {% endautoescape %}
+                    {% endfor %}
+                {% endif %}
+                <div class="justify-items-center row">
+                    <button type="submit" value="password" name="update" class="btn btn-light btn-outline-secondary mt-auto text-body col-5">Modifier</button><br />
+                </div>
+                {% if pwd_messages %}
+                    {% for message in pwd_messages %}
+                    {% autoescape off %}
+                        <p class="alert-success">{{ message }}</p>
+                    {% endautoescape %}
+                    {% endfor %}
+                {% endif %}
             {% endif %}
         </form>
     </div>
