--- a/store/templates/store/basket.html
+++ b/store/templates/store/basket.html
@@ -112,7 +112,7 @@
                         </div>
                         {% endif %}
                         <div class="col-2">
-                            <br /><br /><button type="submit" class="btn btn-success" onclick="return confirm('Merci de confirmer');">Commander</button>
+                            <br /><br /><button type="submit" class="btn btn-light btn-outline-secondary mt-auto text-body" onclick="return confirm('Merci de confirmer');">Commander</button>
                         </div>
                     </div>
                 </form>
