--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,5 +1,5 @@
 {% extends 'store/base.html' %}
 
 {% block content %}
-{% include 'store/list.html' with list_title='Nos ouvrages' %}
+{% include 'store/list.html' %}
 {% endblock %}
