--- a/store/templates/store/basket.html
+++ b/store/templates/store/basket.html
@@ -57,14 +57,28 @@
         {% endif %}<br /><br />
         {% if user.is_authenticated %}
             <div class="row">
-                <input type="hidden" name="basket" value="{{ basket }}" >
                 <div class="col-10">
                     {% include 'store/contact_detail.html' %}
                 </div>
                 <form class="col-2" action="{% url 'store:basket' %}" method="post">
                     {% csrf_token %}
                     <input type="hidden" name="basket" value="{{ basket }}" >
-                    <button type="submit" value="commander" name="order" class="btn btn-light btn-outline-secondary mt-auto text-body" onclick="return confirm('Merci de confirmer');">Commander</button>
+                    <button type="submit" value="commander" name="order" class="btn btn-light btn-outline-secondary mt-auto text-body"
+                        onclick="return confirm('Merci de confirmer');">Commander</button>
+                    {% if errors %}
+                        {% for error in errors %}
+                        {% autoescape off %}
+                            <p class="alert-danger">{{ error }}</p>
+                        {% endautoescape %}
+                        {% endfor %}
+                    {% endif %}
+                    {% if messages %}
+                        {% for message in messages %}
+                        {% autoescape off %}
+                            <p class="alert-success">{{ message }}</p>
+                        {% endautoescape %}
+                        {% endfor %}
+                    {% endif %}
                 </form>
             </div>
         {% else %}
