--- a/store/templates/store/list.html
+++ b/store/templates/store/list.html
@@ -50,7 +50,7 @@
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 {% for ouvrage in ouvrages %}
-                    <div class="col mb-5">
+                    <div class="col-md-4 mb-5">
                         <div class="card h-100">
                             <div class="row">
                                 <div class="col-4">
@@ -67,7 +67,7 @@
                                             <span class="text-muted">{{ ouvrage.price }} €</span>
                                         </div>
                                     </div>
-                                    <div class="card-footer h-25 border-top-0 bg-transparent bottom-0">
+                                    <div class="card card-footer h-25 border-0 bg-transparent justify-content-end bottom-1">
                                             <a class="open-item btn btn-outline-dark mt-auto" href="{% url 'store:detail' ouvrage_id=ouvrage.id %}"
                                             data-popup-url="{% url 'store:detail' ouvrage_id=ouvrage.id %}">
                                             Sélectionner
