add popup error

--- a/store/templates/store/booking.html
+++ b/store/templates/store/booking.html
@@ -17,7 +17,7 @@
                 <div class="col-2">
                     {% bootstrap_form BForm %}
                 </div>
-                <div class="col-2">
+                <div class="col-2"><br />
                     <input class="btn btn-light btn-outline-secondary mt-auto text-body" type="submit" value="Filtrer" />
                 </div>
             </form>
