--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -3,7 +3,7 @@
 
 {% block content %}
         {% if errors %}
-        {% include "store/popup.html" with errors=errors %}
+            {% include "store/item_popup.html" with errors=errors %}
         {% endif %}
         <div class="col mb-4">
             <div class="card text-center">
