--- a/store/templates/store/contact_detail.html
+++ b/store/templates/store/contact_detail.html
@@ -7,27 +7,23 @@
             {% csrf_token %}
             <div class="row row-col-2">
                 <div class="col">
-                    <p class="card-header fw-bolder text-center form-title" for="{{ CForm_dsa.id_for_label }}">Adresse de facturation</p><br />
+                    <p class="card-header fw-bolder text-center" for="{{ CForm_dsa.id_for_label }}">Adresse de facturation</p><br />
                     {% bootstrap_form CForm_dsa %}
                 </div>
                 <div class="col">
-                    <p class="card-header fw-bolder text-center form-title" for="{{ CForm_dia.id_for_label }}">Adresse de livraison</p><br />
+                    <p class="card-header fw-bolder text-center" for="{{ CForm_dia.id_for_label }}">Adresse de livraison</p><br />
                     {% bootstrap_form CForm_dia %}
                 </div>
             </div>
             {% if not user.is_staff %}
-                <div class="row">
-                    <button type="submit" value="address" name="update" class="btn btn-light btn-outline-secondary mt-auto text-body col-2">Modifier</button>
+                <div class="card-footer bg-transparent">
+                    <button type="submit" value="address" name="update" class="btn btn-light btn-outline-secondary mt-auto text-body">Modifier</button>
                 </div>
                 {% if adr_errors %}
-                    {% include "store/popup.html" with errors=adr_errors %}
+                    {% include "store/item_popup.html" with errors=adr_errors %}
                 {% endif %}
                 {% if adr_messages %}
-                    {% for message in adr_messages %}
-                    {% autoescape off %}
-                        <p class="alert-success">{{ message }}</p>
-                    {% endautoescape %}
-                    {% endfor %}
+                    {% include "store/item_popup.html" with messages=adr_messages %}
                 {% endif %}
             {% endif %}
         </form>
