--- a/store/templates/store/list.html
+++ b/store/templates/store/list.html
@@ -55,7 +55,7 @@
                             <div class="row">
                                 <div class="col-4">
                                     {% if ouvrage.picture != "" %}
-                                        <img class="cardcard-img-top img-height-fix" src="{% static 'store/couv/' %}{{ ouvrage.picture }}" alt="..." />
+                                        <img class="card-img-top img-height-fix" src="{% static 'store/couv/' %}{{ ouvrage.picture }}" alt="..." />
                                     {% else %}
                                         <img class="card-img-top img-height-fix" src="{% static 'store/couv/' %}sans-couverture.png" alt="..." />
                                     {% endif %}
