modify send mail

--- a/store/templates/store/email_message.html
+++ b/store/templates/store/email_message.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div class="container px-4 px-lg-5">
     <div class="card">
+        {{ email_contact }}
         {{ message }}
     </div>
 </div>
