--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -49,7 +49,7 @@
                         </li>
                         {% endif %}
                     </ul>
-                    <div class="d-flex">
+                    <div class="navbar-nav d-flex">
                         {% if user.is_staff %}
                             <a  href="{% url 'store:booking' %}">
                                 <button class="btn btn-outline-dark" type="submit">
