--- a/store/templates/store/list.html
+++ b/store/templates/store/list.html
@@ -47,8 +47,8 @@
     {% if paginate %}
         {% include 'store/paginate.html' %}
     {% endif %}
-        <div class="container px-4 px-lg-5 mt-5">
-            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+        <div class="container">
+            <div class="row row-cols-sm-auto justify-content-center">
                 {% for ouvrage in ouvrages %}
                     <div class="col-md-4 mb-5">
                         <div class="card h-100">
@@ -68,17 +68,16 @@
                                         </div>
                                     </div>
                                     <div class="card card-footer h-25 border-0 bg-transparent justify-content-end bottom-1">
-                                            <a class="open-item btn btn-outline-dark mt-auto" href="{% url 'store:detail' ouvrage_id=ouvrage.id %}"
+                                        <a class="open-item btn btn-outline-secondary mt-auto" href="{% url 'store:detail' ouvrage_id=ouvrage.id %}"
                                             data-popup-url="{% url 'store:detail' ouvrage_id=ouvrage.id %}">
                                             Sélectionner
-                                            </a>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 {% endfor %}
-
             </div>
         </div>
     {% if paginate %}
