add alert messages

--- a/store/templates/store/basket.html
+++ b/store/templates/store/basket.html
@@ -66,10 +66,10 @@
                     <button type="submit" value="commander" name="order" class="btn btn-light btn-outline-secondary mt-auto text-body"
                         onclick="return confirm('Merci de confirmer');">Commander</button>
                     {% if errors %}
-                        {% include "store/item_popup.html" with errors=adr_errors %}
+                        {% include "store/item_toast.html" with errors=adr_errors %}
                     {% endif %}
                     {% if messages %}
-                        {% include "store/item_popup.html" with messages=messages %}
+                        {% include "store/item_toast.html" with messages=messages %}
                     {% endif %}
                 </form>
             </div>
