--- a/store/templates/store/message.html
+++ b/store/templates/store/message.html
@@ -1,11 +1,9 @@
 {% load bootstrap4 %}
 
-<div class="card container">
-    <form class="form-group row" action="{% url 'store:contact_us' %}" method="post">
-        {% csrf_token %}
-        {% bootstrap_form MForm %}
-        <div class="row">
-            <button type="submit" class="btn btn-secondary btn-outline-dark mt-auto text-white col-2 ms-sm-3">Envoyer</button>
-        </div>
-    </form>
-</div>
+
+<form id="form-modal-body" class="form-group" action="{% url 'store:contactus' %}" method="post">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    <button type="submit" class="btn btn-secondary btn-outline-dark mt-auto text-white validmodal">Envoyer</button>
+    {{ message }}
+</form>
