--- a/store/templates/store/profil.html
+++ b/store/templates/store/profil.html
@@ -7,6 +7,11 @@
         <hr class="detail-separator">
         <h1 class="intro-text text-center">{{ contact.default_shipping_address.first_name }} {{ contact.default_shipping_address.last_name }}</h1>
         <hr class="detail-separator">
+        {% if messages %}
+            {% for message in messages %}
+                {% include "store/item_alert.html" %}
+            {% endfor %}
+        {% endif %}
         <div class="row">
             <div class="col-3">
                 {% include "store/user_detail.html" %}
