add required True

--- a/store/templates/store/db.html
+++ b/store/templates/store/db.html
@@ -16,7 +16,7 @@
                 <h5 class="intro-text text-center">Importer Base</h5>
                 <hr class="detail-separator"></div>
             <div class="col-6">
-                <input class="form-control" type="file" value='' name="xls" />
+                <input class="form-control" type="file" value='' name="xls" required=True/>
             </div>
             <div class="col-5">
                 <input class="btn btn-light btn-outline-secondary mt-auto text-body" type="submit" value="Importer">
@@ -30,7 +30,7 @@
                 <h5 class="intro-text text-center">Exporter Base</h5>
                 <hr class="detail-separator"></div>
             <div class="col-6">
-                <input class="form-control" type="file" value='' name="xls" />
+                <input class="form-control" type="file" value='' name="xls"  required=True/>
             </div>
             <div class="col-5">
                 <input class="btn btn-light btn-outline-secondary mt-auto text-body" type="submit" value="Exporter">
